@@ -19,14 +19,16 @@ return array(
 			'tests/qunit/suites/resources/jquery/jquery.tabIndex.test.js',
 			'tests/qunit/suites/resources/jquery/jquery.tablesorter.test.js',
 			'tests/qunit/suites/resources/jquery/jquery.textSelection.test.js',
+			'tests/qunit/suites/resources/mediawiki/mediawiki.jqueryMsg.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.jscompat.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.Title.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.Uri.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.user.test.js',
 			'tests/qunit/suites/resources/mediawiki/mediawiki.util.test.js',
+			'tests/qunit/suites/resources/mediawiki.api/mediawiki.api.test.js',
+			'tests/qunit/suites/resources/mediawiki.api/mediawiki.api.parse.test.js',
 			'tests/qunit/suites/resources/mediawiki.special/mediawiki.special.recentchanges.test.js',
-			'tests/qunit/suites/resources/mediawiki/mediawiki.jqueryMsg.test.js',
 		),
 		'dependencies' => array(
 			'jquery.autoEllipsis',
@@ -43,12 +45,14 @@ return array(
 			'jquery.tablesorter',
 			'jquery.textSelection',
 			'mediawiki',
+			'mediawiki.api',
+			'mediawiki.api.parse',
+			'mediawiki.jqueryMsg',
 			'mediawiki.Title',
 			'mediawiki.Uri',
 			'mediawiki.user',
 			'mediawiki.util',
 			'mediawiki.special.recentchanges',
-			'mediawiki.jqueryMsg',
 		),
 		'position' => 'top',
 	)
